2009-02-25  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/lu.cc (maybe_set_triangular): New function.
	(Flu): Use it.
	* DLD-FUNCTIONS/qr.cc (maybe_set_triangular): New function.
	(Fqr): Use it.

2009-02-25  John W. Eaton  <jwe@octave.org>

	* input.cc (get_debug_input): Write debugging location info
	directly to std::cerr instead of calling message.
	* pt-eval.cc (tree_evaluator::do_breakpoint): Write debugging
	location info directly to std::cerr, not octave_stdout.

	* defaults.h.in (OCTAVE_DOC_CACHE_FILE): New macro.
	* defaults.cc (set_default_doc_cache_file): New function.
	(install_defaults): Call it.

	* help.cc (__list_functions__): Simplify

	* input.cc (get_debug_input): Don't pass arbitrary input to
	message as a format string.

2009-02-24  John W. Eaton  <jwe@octave.org>

	* help.cc, help.h (Vdoc_cache_file): New global variable.
	(Fdoc_cache_file): New function.
	* octave.cc (DOC_CACHE_FILE_OPTION): New option tag.
	(long_opts): Include doc-cache-file in the list.
	(octave_main): Handle DOC_CACHE_FILE_OPTION.

2009-02-24  Jaroslav Hajek  <highegg@gmail.com>

	* ov-scalar.h 
	(octave_scalar::int8_scalar_value): New method.
	(octave_scalar::int16_scalar_value): New method.
	(octave_scalar::int32_scalar_value): New method.
	(octave_scalar::int64_scalar_value): New method.
	(octave_scalar::uint8_scalar_value): New method.
	(octave_scalar::uint16_scalar_value): New method.
	(octave_scalar::uint32_scalar_value): New method.
	(octave_scalar::uint64_scalar_value): New method.

	* ov-float.h 
	(octave_float_scalar::int8_scalar_value): New method.
	(octave_float_scalar::int16_scalar_value): New method.
	(octave_float_scalar::int32_scalar_value): New method.
	(octave_float_scalar::int64_scalar_value): New method.
	(octave_float_scalar::uint8_scalar_value): New method.
	(octave_float_scalar::uint16_scalar_value): New method.
	(octave_float_scalar::uint32_scalar_value): New method.
	(octave_float_scalar::uint64_scalar_value): New method.
